--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,6 +31,9 @@
   "rules": {
     "prettier/prettier": "error",
     "camelcase": "off",
+    "react/prop-types": "off",
+    "jsx-a11y/label-has-associated-control": "off",
+    "react/destructuring-assignment": "off",
     "react/jsx-one-expression-per-line": "off",
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
