--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,6 +30,7 @@
   ],
   "rules": {
     "prettier/prettier": "error",
+    "react/jsx-props-no-spreading": "off",
     "camelcase": "off",
     "react/prop-types": "off",
     "jsx-a11y/label-has-associated-control": "off",
