--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,6 +29,7 @@
       "prettier"
   ],
   "rules": {
+    "react/jsx-curly-newline": "off",
     "prettier/prettier": "error",
     "react/jsx-props-no-spreading": "off",
     "camelcase": "off",
